add products api
