# routes.py
@@ -16,5 +16,10 @@ def register_routes(app):
 
     # Storehouses
     app.router.add_get('/api/v1/storehouses', api.get_store_houses_handler, name='get-storehouses')
-    app.router.add_post('/api/v1/storehouse', api.create_store_house_handler, name='create-storehouses')
-    app.router.add_delete('/api/v1/storehouse', api.delete_store_house_handler, name='delete-storehouses')
+    app.router.add_post('/api/v1/storehouse', api.create_store_house_handler, name='create-storehouse')
+    app.router.add_delete('/api/v1/storehouse', api.delete_store_house_handler, name='delete-storehouse')
+
+    # Storehouses
+    app.router.add_get('/api/v1/products', api.get_products_handler, name='get-products')
+    app.router.add_post('/api/v1/product', api.create_product_handler, name='create-product')
+    app.router.add_delete('/api/v1/product', api.delete_product_handler, name='delete-product')
