# utils/schemas.py
@@ -26,3 +26,5 @@ create_user_request_schema = get_schema('CreateUserRequest')
 login_request_schema = get_schema('LoginRequest')
 create_storehouse_request_schema = get_schema('CreateStoreHouseObject')
 delete_storehouse_request_schema = get_schema('DeleteStoreHouseObject')
+create_product_request_schema = get_schema('CreateProductObject')
+delete_product_request_schema = get_schema('DeleteProductObject')
